--- a/aboutus.html
+++ b/aboutus.html
@@ -25,13 +25,13 @@
 	      <p>Where you can find who are the peoples associated to our shop.<p>
 	        <hr>
 	  <figure>
-	      <img src="images/pic1.jpg" width="300px"h height="250px"/>
+	      <img src="pic1.jpg" width="300px"h height="250px"/>
 	     <figcaption>Aeron James Hincayog</figcaption>
 	     <a href="https://www.facebook.com/aeronjames.guevarrahincayog">FB: Aeron James Hincayog</a>
 	  </figure>
 	  <div class="image2" >
 	    <figure>
-	      <img src="images/pic2.jpeg" width="300px" height="250px" />
+	      <img src="pic2.jpeg" width="300px" height="250px" />
 	      <figcaption>Neil Kevin Pahamotang</figcaption>
 	      <a href="https://www.facebook.com/neilkevin.mp">FB: Neil Kevin Pahamotang</a>
 	      </figure>
